--- a/_data/education.yml
+++ b/_data/education.yml
@@ -1,6 +1,6 @@
 # Degree
-- degree: Full Stack Webdeveloper Nanodegree  
-  uni: Udacity
-  year: June, 2014 &mdash; January, 2015
+- degree: Computer Engineering
+  uni: UTD
+  year: August, 2020
   # awards:
-  # summary:
+  summary: The day I started CE
